[driver-app] Register now uses material theme.
Also:
*Login > fixed input errors to appear on layout instead of the actual EditText element.
*Login/Register > fixed auto focus on activity start.
*Utils > changed password validator to dummy for now.

--- a/mobile-apps/driver-app/app/src/main/res/layout/activity_login.xml
+++ b/mobile-apps/driver-app/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -14,7 +13,9 @@
         android:layout_height="wrap_content"
         android:paddingTop="40dp"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:paddingRight="16dp"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true">
 
         <ImageView
             android:layout_width="wrap_content"
