--- a/mobile-apps/driver-app/app/src/main/res/layout/activity_register.xml
+++ b/mobile-apps/driver-app/app/src/main/res/layout/activity_register.xml
@@ -20,8 +20,7 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/etEmailLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
+            android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
@@ -33,8 +32,7 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/etUsernameLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
+            android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/etUsername"
                 android:layout_width="match_parent"
@@ -46,8 +44,7 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/etPasswordLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
+            android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/etPassword"
                 android:layout_width="match_parent"
@@ -59,8 +56,7 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/etRepeatPasswordLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
+            android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/etRepeatPassword"
                 android:layout_width="match_parent"
@@ -73,8 +69,6 @@
             android:id="@+id/btnRegister"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             android:padding="16dp"
             android:text="@string/register"/>
     </LinearLayout>
