[driver-app] Fixed theme colors

--- a/mobile-apps/driver-app/app/src/main/res/layout/activity_user_area.xml
+++ b/mobile-apps/driver-app/app/src/main/res/layout/activity_user_area.xml
@@ -28,6 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnLogout"/>
 
     <Spinner
+        style="@style/Widget.AppCompat.Spinner.Underlined"
         android:id="@+id/sRoutes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
