--- a/mobile-apps/driver-app/app/src/main/res/values/styles.xml
+++ b/mobile-apps/driver-app/app/src/main/res/values/styles.xml
@@ -1,7 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="AppThemeDark">
+    <style name="AppTheme" parent="AppThemeLight">
+        <item name="android:buttonStyle">@style/ButtonStyle</item>
+
+        <item name="hintTextAppearance">@style/HintStyle</item>
+        <item name="errorTextAppearance">@style/ErrorStyle</item>
+        <item name="counterTextAppearance">@style/CounterStyle</item>
+        <item name="counterOverflowTextAppearance">@style/CounterOverflowStyle</item>
     </style>
 
     <!-- Light application theme. -->
@@ -35,4 +41,26 @@
         <item name="android:colorAccent">@color/secondary</item>
         <item name="android:textColorSecondaryInverse">@color/secondary_text_inverse</item>
     </style>
+
+    <style name="ButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@color/primary</item>
+        <item name="android:textColor">@color/primary_text_inverse</item>
+    </style>
+
+    <style name="HintStyle">
+        <item name="android:textColor">@color/secondary_text</item>
+    </style>
+
+    <style name="ErrorStyle">
+        <!--<item name="android:textColor">@color/error</item>-->
+    </style>
+
+    <style name="CounterStyle">
+        <item name="android:textColor">@color/primary</item>
+    </style>
+
+    <style name="CounterOverflowStyle">
+        <!--<item name="android:textColor">@color/primary</item>-->
+    </style>
+
 </resources>
