--- a/mobile-apps/driver-app/app/src/main/res/layout/activity_main.xml
+++ b/mobile-apps/driver-app/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context="gr.bus_tracker.driver_app.MainActivity">
 
+    <include layout="@layout/main_toolbar" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
