--- a/mobile-apps/driver-app/app/src/main/res/layout/activity_login.xml
+++ b/mobile-apps/driver-app/app/src/main/res/layout/activity_login.xml
@@ -6,12 +6,13 @@
     android:layout_height="fill_parent"
     tools:context="gr.bus_tracker.driver_app.auth.LoginActivity">
 
-    <include layout="@layout/main_toolbar" />
+    <include layout="@layout/main_toolbar"
+             android:id="@+id/include3"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/include3"
         android:layout_alignParentStart="true">
 
         <LinearLayout
